--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,7 @@
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
   "arrowParens": "always",
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "svelteBracketNewLine": true,
+  "htmlWhitespaceSensitivity": "ignore"
 }
