--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "react-i18n-lite",
+  "name": "i18nlite",
   "version": "1.0.0",
-  "description": "A lightweight and simple i18n library for react",
+  "private": true,
+  "description": "A lightweight and simple i18n library",
   "author": {
     "name": "Leandro Hinckel Silveira",
     "email": "leandro.hinckel@gmail.com",
@@ -24,31 +25,38 @@
     "node": ">=10"
   },
   "scripts": {
-    "clean": "rm -Rf dist",
-    "pretsc": "npm run clean",
-    "tsc": "tsc",
-    "build": "npm tsc -- --project tsconfig.prod.json",
-    "postbuild": "cp -R ./src ./dist/src",
-    "start": "npm tsc -- --project tsconfig.json --watch",
-    "test": "cross-env CI=1 react-scripts test --env=jsdom",
-    "test:watch": "npm run test -- --watchAll",
-    "lint": "eslint .",
-    "predeploy": "cd example && npm install && npm run build",
-    "deploy": "gh-pages -d example/build",
-    "prepublish": "run-s build"
-  },
-  "peerDependencies": {
-    "react": "^16.0.0"
+    "postinstall": "npm run install:module:core && npm run install:module:testing && npm run install:module:react && npm run install:module:svelte && npm run install:example:react && npm run install:example:svelte",
+    "install:module:core": "cd modules/core && npm i",
+    "install:module:testing": "cd modules/testing && npm i",
+    "install:module:react": "cd modules/react && npm i",
+    "install:module:svelte": "cd modules/svelte && npm i",
+    "install:example:react": "cd example/react && npm i",
+    "install:example:svelte": "cd example/svelte && npm i",
+    "build:module:core": "cd modules/core && npm run build",
+    "build:module:testing": "cd modules/testing && npm run build",
+    "build:module:react": "cd modules/react && npm run build",
+    "build:example:react": "cd example/react && npm run build",
+    "build:example:svelte": "cd example/svelte && npm run build",
+    "start:example:react": "cd example/react && npm run start",
+    "start:example:svelte": "cd example/svelte && npm run start",
+    "test:module:react": "cd modules/react && npm test",
+    "test:module:svelte": "cd modules/svelte && npm test"
   },
   "files": [
     "dist",
+    "dist/react",
     "dist/testing"
   ],
   "devDependencies": {
     "@babel/preset-react": "^7.16.7",
+    "@rollup/plugin-commonjs": "^21.0.2",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-typescript": "^8.3.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
+    "@testing-library/svelte": "^3.1.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tsconfig/svelte": "^3.0.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.20",
     "@types/react": "^17.0.39",
@@ -67,14 +75,25 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-standard": "^5.0.0",
+    "eslint-plugin-svelte": "^1.1.2",
     "gh-pages": "^3.2.3",
     "jest": "^27.5.0",
-    "microbundle-crl": "^0.13.11",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
+    "prettier-plugin-svelte": "^2.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^5.0.0",
+    "rollup-plugin-cleaner": "^1.0.0",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-livereload": "^2.0.5",
+    "rollup-plugin-serve": "^1.1.0",
+    "rollup-plugin-svelte": "^7.1.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "svelte": "^3.46.4",
+    "svelte-check": "^2.4.6",
+    "svelte-jester": "^2.3.2",
+    "svelte-preprocess": "^4.10.4",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
