--- a/modules/core/tsconfig.json
+++ b/modules/core/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../dist/core",
-    "sourceRoot": "../../modules/core/src"
+    "outDir": "dist",
+    "sourceRoot": "../src"
   },
   "include": ["src"]
 }
