--- a/modules/svelte/package.json
+++ b/modules/svelte/package.json
@@ -16,10 +16,20 @@
     "email": "leandro.hinckel@gmail.com",
     "url": "https://github.com/leandrohsilveira/react-i18n-lite/issues"
   },
-  "main": "index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "typings": "dist/index.d.ts",
+  "source": "src/index.ts",
+  "files": [
+    "dist",
+    "src",
+    "README.md"
+  ],
+  "engines": {
+    "node": ">=10"
+  },
   "scripts": {
-    "postinstall": "npm run build",
-    "clean": "rm -Rf ../../dist/svelte",
+    "clean": "rm -Rf ./dist",
     "pretsc": "npm run clean",
     "tsc": "tsc",
     "build": "npm run tsc -- --project tsconfig.build.json",
@@ -32,8 +42,8 @@
     "@i18nlite/core": "1.0.0"
   },
   "devDependencies": {
-    "@i18nlite/core": "file:../../dist/core",
-    "@i18nlite/testing": "file:../../dist/testing"
+    "@i18nlite/core": "file:../core/dist",
+    "@i18nlite/testing": "file:../testing/dist"
   },
   "jest": {
     "moduleNameMapper": {
