--- a/package.json
+++ b/package.json
@@ -21,32 +21,46 @@
   "module": "index.js",
   "typings": "index.d.ts",
   "source": "src/index.ts",
+  "files": [
+    "dist"
+  ],
   "engines": {
     "node": ">=10"
   },
   "scripts": {
-    "postinstall": "npm run install:module:core && npm run install:module:testing && npm run install:module:react && npm run install:module:svelte && npm run install:example:react && npm run install:example:svelte",
+    "postinstall": "npm run install:all",
+    "install:all": "npm run install:module:core && npm run install:module:testing && npm run install:module:react && npm run install:module:svelte && npm run install:example:react && npm run install:example:svelte",
     "install:module:core": "cd modules/core && npm i",
+    "postinstall:module:core": "npm run build:module:core",
     "install:module:testing": "cd modules/testing && npm i",
+    "postinstall:module:testing": "npm run build:module:testing",
     "install:module:react": "cd modules/react && npm i",
+    "postinstall:module:react": "npm run build:module:react",
     "install:module:svelte": "cd modules/svelte && npm i",
+    "postinstall:module:svelte": "npm run build:module:svelte",
     "install:example:react": "cd example/react && npm i",
     "install:example:svelte": "cd example/svelte && npm i",
+    "build:module:all": "npm run build:module:core && npm run build:module:testing && npm run build:module:react && npm run build:module:svelte",
     "build:module:core": "cd modules/core && npm run build",
     "build:module:testing": "cd modules/testing && npm run build",
     "build:module:react": "cd modules/react && npm run build",
+    "build:module:svelte": "cd modules/svelte && npm run build",
     "build:example:react": "cd example/react && npm run build",
     "build:example:svelte": "cd example/svelte && npm run build",
     "start:example:react": "cd example/react && npm run start",
     "start:example:svelte": "cd example/svelte && npm run start",
     "test:module:react": "cd modules/react && npm test",
-    "test:module:svelte": "cd modules/svelte && npm test"
+    "test:module:svelte": "cd modules/svelte && npm test",
+    "link:module:all": "npm run link:module:core && npm run link:module:testing && npm run link:module:react && npm run link:module:svelte",
+    "link:module:core": "cd modules/core && npm link",
+    "link:module:testing": "cd modules/testing && npm link",
+    "link:module:react": "cd modules/react && npm link",
+    "link:module:svelte": "cd modules/svelte && npm link",
+    "publish:module:core": "cd modules/core && npm publish --access=public",
+    "publish:module:testing": "cd modules/testing && npm publish --access=public",
+    "publish:module:react": "cd modules/react && npm publish --access=public",
+    "publish:module:svelte": "cd modules/svelte && npm publish --access=public"
   },
-  "files": [
-    "dist",
-    "dist/react",
-    "dist/testing"
-  ],
   "devDependencies": {
     "@babel/preset-react": "^7.16.7",
     "@rollup/plugin-commonjs": "^21.0.2",
