--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "i18nlite",
-  "version": "1.0.0",
+  "version": "next",
   "private": true,
   "description": "A lightweight and simple i18n library",
   "author": {
@@ -28,8 +28,19 @@
     "node": ">=10"
   },
   "scripts": {
-    "postinstall": "npm run install:all",
-    "install:all": "npm run install:module:core && npm run install:module:testing && npm run install:module:react && npm run install:module:svelte && npm run install:example:react && npm run install:example:svelte",
+    "ci:module": "run-s -l ci:module:*",
+    "ci:module:core": "cd modules/core && npm i",
+    "postci:module:core": "npm run build:module:core",
+    "ci:module:testing": "cd modules/testing && npm i",
+    "postci:module:testing": "npm run build:module:testing",
+    "ci:module:react": "cd modules/react && npm i",
+    "postci:module:react": "npm run build:module:react",
+    "ci:module:svelte": "cd modules/svelte && npm i",
+    "postci:module:svelte": "npm run build:module:svelte",
+    "ci:example": "run-s -l ci:example:*",
+    "ci:example:react": "cd example/react && npm i",
+    "ci:example:svelte": "cd example/svelte && npm i",
+    "install:module": "run-s -l install:module:*",
     "install:module:core": "cd modules/core && npm i",
     "postinstall:module:core": "npm run build:module:core",
     "install:module:testing": "cd modules/testing && npm i",
@@ -38,28 +49,38 @@
     "postinstall:module:react": "npm run build:module:react",
     "install:module:svelte": "cd modules/svelte && npm i",
     "postinstall:module:svelte": "npm run build:module:svelte",
+    "install:example": "run-s -l install:example:*",
     "install:example:react": "cd example/react && npm i",
     "install:example:svelte": "cd example/svelte && npm i",
-    "build:module:all": "npm run build:module:core && npm run build:module:testing && npm run build:module:react && npm run build:module:svelte",
+    "build:module": "run-s -l build:module:*",
     "build:module:core": "cd modules/core && npm run build",
     "build:module:testing": "cd modules/testing && npm run build",
     "build:module:react": "cd modules/react && npm run build",
     "build:module:svelte": "cd modules/svelte && npm run build",
     "build:example:react": "cd example/react && npm run build",
     "build:example:svelte": "cd example/svelte && npm run build",
+    "start:example": "run-p -l start:example:*",
     "start:example:react": "cd example/react && npm run start",
     "start:example:svelte": "cd example/svelte && npm run start",
+    "test": "npm run test:module",
+    "test:module": "run-p -l test:module:*",
     "test:module:react": "cd modules/react && npm test",
     "test:module:svelte": "cd modules/svelte && npm test",
-    "link:module:all": "npm run link:module:core && npm run link:module:testing && npm run link:module:react && npm run link:module:svelte",
+    "link:module": "run-p -l link:module:*",
     "link:module:core": "cd modules/core && npm link",
     "link:module:testing": "cd modules/testing && npm link",
     "link:module:react": "cd modules/react && npm link",
     "link:module:svelte": "cd modules/svelte && npm link",
+    "publish:module": "run-p -l publish:module:*",
     "publish:module:core": "cd modules/core && npm publish --access=public",
     "publish:module:testing": "cd modules/testing && npm publish --access=public",
     "publish:module:react": "cd modules/react && npm publish --access=public",
-    "publish:module:svelte": "cd modules/svelte && npm publish --access=public"
+    "publish:module:svelte": "cd modules/svelte && npm publish --access=public",
+    "version:module": "run-s -l version:module:*",
+    "version:module:core": "cd modules/core && npm version $VERSION",
+    "version:module:testing": "cd modules/testing && npm version $VERSION",
+    "version:module:react": "cd modules/react && npm version $VERSION",
+    "version:module:svelte": "cd modules/svelte && npm version $VERSION"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.16.7",
