--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "i18nlite",
-  "version": "next",
+  "version": "0.0.0",
   "private": true,
   "description": "A lightweight and simple i18n library",
   "author": {
