--- a/modules/react/package.json
+++ b/modules/react/package.json
@@ -37,7 +37,7 @@
     "test": "jest -c ./jest.config.ts"
   },
   "peerDependencies": {
-    "@i18nlite/core": "1.0.0"
+    "@i18nlite/core": "^1.0.0"
   },
   "devDependencies": {
     "@i18nlite/core": "file:../core/dist",
