--- a/modules/svelte/package.json
+++ b/modules/svelte/package.json
@@ -39,7 +39,7 @@
   },
   "peerDependencies": {
     "svelte": "^3.46.4",
-    "@i18nlite/core": "1.0.0"
+    "@i18nlite/core": "^1.0.0"
   },
   "devDependencies": {
     "@i18nlite/core": "file:../core/dist",
