--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "url": "https://github.com/leandrohsilveira/react-i18n-lite/issues"
   },
   "scripts": {
+    "test": "vitest run --coverage",
     "test:dev": "vitest",
     "test:ui": "vitest --ui"
   },
@@ -31,6 +32,7 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "^3.1.1",
     "@vitest/ui": "^3.1.1",
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.1.1",
