--- a/examples/react/tsconfig.json
+++ b/examples/react/tsconfig.json
@@ -1,6 +1,11 @@
 {
+  "$schema": "https://json.schemastore.org/tsconfig.json",
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "jsx": "react-jsx"
-  }
+  },
+  "include": [
+    "vite.config.ts",
+    "./src"
+  ]
 }
