--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "i18nlite",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "private": true,
+  "type": "module",
   "description": "A lightweight and simple i18n library",
   "author": {
     "name": "Leandro Hinckel Silveira",
@@ -24,7 +25,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@sveltejs/vite-plugin-svelte": "^4.0.4",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/svelte": "^5.2.7",
@@ -46,7 +48,7 @@
     "svelte": "^5.0.3",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0",
+    "vite": "^5.4.17",
     "vitest": "^3.1.1"
   },
   "workspaces": [
