--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,7 +1,7 @@
 # This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
 # For more information see: https://help.github.com/actions/language-and-framework-guides/publishing-nodejs-packages
 
-name: Node.js Package
+name: Publish packages
 
 on:
   release:
@@ -28,9 +28,9 @@ jobs:
           node-version: 22
           registry-url: https://registry.npmjs.org/
       - run: npm ci
-      - run: npm version $VERSION
+      - run: npm version -ws $VERSION
         env:
           VERSION: ${{ github.event.release.tag_name }}
-      - run: npm run publish:module
+      - run: npm publish -w=@i18nlite/{core,react,svelte}
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
